--- a/index.html
+++ b/index.html
@@ -48,6 +48,41 @@
       max-width: 200px;
       text-align: center;
     }
+
+    #error-message {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255, 255, 255, 0.8);
+      padding: 20px;
+      border-radius: 3px;
+      font-size: 14px;
+      font-family: Arial, sans-serif;
+      display: none;
+    }
+
+    .dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: red;
+      position: absolute;
+      transform: translate(-50%, -50%);
+      animation: pulse 1s infinite;
+    }
+
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+        opacity: 1;
+      }
+
+      100% {
+        transform: scale(1.5);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 
@@ -58,6 +93,7 @@
     <div><a href="https://maps.gsi.go.jp/" target="_blank" rel="noopener noreferrer">地理院地図</a></div>
     <div><a href="https://www.jma.go.jp/bosai/nowc/" target="_blank" rel="noopener noreferrer">気象庁ナウキャスト</a></div>
   </div>
+  <div id="error-message">位置情報の使用が許可されていません。</div>
   <script>
     class MyControl {
       constructor() {
@@ -221,15 +257,19 @@
       if ('geolocation' in navigator) {
         navigator.geolocation.getCurrentPosition((position) => {
           const userLocation = [position.coords.longitude, position.coords.latitude];
-          new maplibregl.Marker()
+          const dot = document.createElement('div');
+          dot.className = 'dot';
+          new maplibregl.Marker(dot)
             .setLngLat(userLocation)
             .addTo(map);
-          map.flyTo({ center: userLocation, zoom: 10 });
+          map.flyTo({ center: userLocation, zoom: 12 });
         }, (error) => {
           console.error('Geolocation error:', error);
+          document.getElementById('error-message').style.display = 'block';
         });
       } else {
         console.error('Geolocation not supported');
+        document.getElementById('error-message').style.display = 'block';
       }
     }
 
