--- a/index.html
+++ b/index.html
@@ -66,25 +66,15 @@
       onAdd(map) {
         this._map = map;
         this.update();
-        // 毎分チェックし、分が5の倍数になったら更新
-        setInterval(() => this.checkAndUpdate(), 60000);
+        // 毎秒更新
+        setInterval(() => this.update(), 1000);
         return null;
       }
 
       async update() {
         const newUrl = await this.fetchNowcastUrl();
-        if (this.url !== newUrl) {
-          this.url = newUrl;
-          this.updateLayer();
-        }
-      }
-
-      checkAndUpdate() {
-        const now = new Date();
-        const minutes = now.getMinutes();
-        if (minutes % 5 === 0) {
-          this.update();
-        }
+        this.url = newUrl;
+        this.updateLayer();
       }
 
       async fetchNowcastUrl() {
