--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <script>
         async function fetchTsunamiData() {
             try {
-                const response = await fetch('https://api.p2pquake.net/v2/history?codes=552&limit=1');
+                const response = await fetch('https://api.p2pquake.net/v2/history?codes=552&limit=1&offset=1');
                 const data = await response.json();
 
                 const majorWarningBody = document.getElementById('major-warning-body');
